Fix whitespace (in code)

--- a/src/styles/login/index.styl
+++ b/src/styles/login/index.styl
@@ -15,11 +15,9 @@
 
       div
         margin-top 40px
-      div:first-child
-        margin-top 0
 
-
-
+        &:first-child
+          margin-top 0
 
   form
     max-width 520px
